# izumi

./: .gitignore  prek.toml  pyproject.toml
scripts/: download_checkpoint.py
src/izumi/: __init__.py  config.py
src/izumi/configs/: inference_diffusion.yaml  inference_vqbet.yaml
src/izumi/configs/model/: resnet_dobbe.yaml
src/izumi/configs/policy/: diffusion.yaml  vqbet.yaml
src/izumi/configs/robot/: stretch3.yaml
src/izumi/inference/: buffer.py  pipeline.py  preprocessor.py
src/izumi/models/: diffusion.py  diffusion_policy.py  encoder.py  gpt.py  vqbet.py  vqvae.py
src/izumi/robot/: client.py  transforms.py
tests/: test_client.py  test_diffusion.py  test_encoder.py  test_gpt.py  test_pipeline.py  test_scaffold.py  test_transforms.py  test_vqbet.py  test_vqvae.py
tests/integration/: test_encoder_checkpoint.py  test_pipeline_integration.py  test_robot_live.py
