[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/izumi"]

[project]
name = "izumi"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    # ML / model
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9,<1.0",
    "einops>=0.7",
    "diffusers>=0.11,<1.0",

    # Configuration
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",

    # Robot communication
    "stretch3-zmq-core @ git+ssh://git@github.com/lnfu/stretch3-zmq.git#subdirectory=packages/core",
    "pyzmq>=26.0",
    "blosc2>=2.0",

    # UI & logging
    "gradio>=4.0",
    "tensorboardX>=2.6",

    # Utilities
    "scipy>=1.10",
    "numpy>=1.25",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "gdown>=5.0",
    "tqdm>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["izumi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "robot: tests requiring a live robot connection (deselect with '-m \"not robot\"')",
]
